--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@angular/common": "~12.2.13",
     "@angular/compiler": "~12.2.13",
     "@angular/core": "~12.2.13",
-    "@angular/fire": "^6.0.0",
+    "@angular/fire": "^7.1.1",
     "@angular/forms": "~12.2.13",
     "@angular/localize": "~12.2.13",
     "@angular/platform-browser": "~12.2.13",
     "@angular/platform-browser-dynamic": "~12.2.13",
     "@angular/router": "~12.2.13",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.4.0",
-    "rxjs": "~6.5.4",
+    "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "firebase": "^9.1.0",
+    "rxfire": "^6.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.13",
@@ -49,7 +51,7 @@
     "tslint": "~6.1.0",
     "typescript": "~4.3.5",
     "@angular-devkit/architect": "~0.1202.13",
-    "firebase-tools": "^8.0.0",
+    "firebase-tools": "^9.22.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1"
